# HeartWise_StatPlots

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  example.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: unit-tests.yml
heartwise_statplots/files_handler/: __init__.py  dicom_reader_example.py  files_handler.py
heartwise_statplots/metrics/: README.md  __init__.py  metrics.py
heartwise_statplots/metrics/examples/: classification_example.py  regression_example.py
heartwise_statplots/utils/: __init__.py  api.py  huggingface_wrapper.py  type_check.py
metrics/: __init__.py  metrics.py
metrics_library/: __init__.py  metrics.py  type_check.py
metrics_library/tests/: test_metrics.py  test_type_check.py
tests/: requirements.txt  test_metrics.py  test_type_check.py
