[tool.poetry]
name = "heartwise-statplots"
version = "0.1.0"
description = "Computes classificaiton and regression metrics"
authors = ["Robert Avram <robert.avram.md@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
scikit-learn = "^1.5.1"
scipy = "^1.14.0"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pylint = "^3.2.6"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.11.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
