[tool.poetry]
name = "heartwise_statplots"  # Should use underscores, not hyphens
version = "0.1.0"
description = "A short description of your package"
authors = ["Jacques Delfrate <jacques.delfrate@gmail.com>"]
license = "MIT"
repository = "https://github.com/HeartWise-AI/HeartWise_StatPlots.git"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "<3.0.0,>=2.0.1"
pandas = "<3.0.0,>=2.2.2"
seaborn = "^0.11.0"
scikit-learn = "<2.0.0,>=1.5.1"
pytest = "^6.0"
tqdm = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"